# django-rest-tfa

./: CHANGELOG  README.md  pyproject.toml  pytest.ini  test_tfa_db
django_rest_tfa/: client_identifiers.py  middleware.py  models.py  serializers.py  urls.py  views.py
django_rest_tfa/migrations/: 0001_initial.py
django_rest_tfa/templates/tfa_email/: body.txt  subject.txt
tests/: conftest.py  manage.py
tests/project/: settings.py  urls.py
tests/test_app/: views.py
tests/test_app/migrations/: 0001_initial.py
tests/tests/: test_api.py  test_settings.py
